# is_numba

./: .gitignore  pyproject.toml  readme.md  test_is_numba.py
.github/workflows/: RunTests.yml  UploadToPyPI.yml
