[project]
name = "is_numba"
version = "0.0.1"
authors = [
  { name="Matthew Liepke", email="author@example.com" },
]
description = "Determine if a variable is a number. Not recommended for use"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GNU"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/mjliepke/is_numba"
Issues = "https://github.com/mjliepke/is_numba/issues"